--- a/public/help/index.html
+++ b/public/help/index.html
@@ -12,6 +12,23 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="/src/css/help.css">
   <link rel="manifest" href="../manifest.json">
+  <!-- for safari and ios -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="PWAGram">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-57x57.png" sizes="57x57">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-60x60.png" sizes="60x60">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-72x72.png" sizes="72x72">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-76x76.png" sizes="76x76">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-114x114.png" sizes="114x114">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-120x120.png" sizes="120x120">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-144x144.png" sizes="144x144">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-152x152.png" sizes="152x152">
+  <meta name="apple-touch-icon" href="/src/images/icons/apple-icon-180x180.png" sizes="180x180">
+  <!-- internet explorer -->
+  <meta name = "msapplication-TileImage" content ="/src/images/icons/app-icon-144x144.png">
+  <meta name = "msapplication-TileColor" content ="#fff">
+  <meta name = "theme-color" content ="#3f51b5">
 </head>
 <body>
 
